[tool.poetry]
name = "lclstream"
version = "0.8.0"
description = "Image streaming application for psana."
authors = ["Cong Wang <wangimagine@gmail.com>",
           "David M. Rogers <predictivestatmech@gmail.com>",
           "Valerio Mariani <valmar@slac.stanford.edu>"
          ]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
psana_push = "lclstream.psana_push:run"
psana_pull = "lclstream.psana_pull:run"
file_push = "lclstream.file_push:run"
file_pull = "lclstream.file_pull:run"

[tool.poetry.dependencies]
python = "^3.9"
pynng = "^0.8.0"
numpy = "^1.20"
typer = "^0.12.3"
h5py = "^3.11.0"
hdf5plugin = "^4.4.0"
stream = {git = "https://github.com/frobnitzem/stream.py", rev = "v1.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
