[tool.poetry]
name = "lclstream"
version = "1.0.0"
description = "Data streaming client for LCLS and LCLS-II"
authors = ["Cong Wang <wangimagine@gmail.com>",
           "David M. Rogers <predictivestatmech@gmail.com>",
           "Valerio Mariani <valmar@slac.stanford.edu>"
          ]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
lclstream = "lclstream.lclstream:app"

[tool.poetry.dependencies]
python = "^3.9"
pynng = "^0.8.0"
numpy = "^1.20"
pydantic = ">=2.1"
typer = "^0.12.3"
h5py = "^3.11.0"
hdf5plugin = "^4.4.0"
stream = {git = "https://github.com/frobnitzem/stream.py", rev = "v1.0.0"}
certified = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
